<resources>
    <string name="app_name">Base Converter</string>
    <string name="sub_title1">تبدیل گر مبنا</string>
    <string name="sub_title2">Base Converter</string>
    <string name="sub_title3">by: M.Nemati</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Base Converter</string>
    <string name="nav_header_subtitle">m.nemati2002@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Converter</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_info">Info</string>

    <string name="tv_input">Insert Input:</string>
    <string name="tv_type">Type here...</string>
    <string name="tv_result_title">Output:</string>
    <string name="btn_convert">Convert</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_clear">Clear</string>

    <string name="rb_2to10"> 2 to 10</string>
    <string name="rb_2to16">2 to 16</string>
    <string name="rb_10to2">10 to 2</string>
    <string name="rb_10to16">10 to 16</string>

    <string name="about_title1">مصطفی نعمتی</string>
    <string name="about_title3">
        &#8226; هنرآموز کامپیوتر<br/>
        &#8226; کارشناس فناوری اطلاعات<br/>
    </string>
    <string name="about_version">Version: 1.0.1</string>
    <string name="about_title0">
        این برنامه با هدف کمک به یادگیری بهتر و انجام راحت تر محاسبات فصل چهارم کتاب دانش فنی پایه در رشته شبکه و نرم افزار رایانه شاخه فنی و حرفه ای نوشته شده است.
    </string>
    <string name="btn_email">ارسال ایمیل</string>

    <string name="tv_explain1">
        از آنجایی که محاسبات روزمره در مبنای ده و با استفاده از ارقام صفر تا 9 انجام می شود ولی سیستم عدد نویسی دودویی، مبنای مورد استفاده در محاسبات رایانه ای است، در این نرم افزار به ایجاد ابزاری برای تبدیل از مبنای ده به دو و برعکس پرداخته ایم.
    </string>

    <string name="tv_explain2">
        هر سیستم عدد نویسی، شامل یک عدد پایه یا مبنا و یک مجموعه ارقام به تعداد عدد مبنا است. در سیستم عدد نویسی ده دهی مبنا عدد 10 است و ارقام آن مجموعه {0,1,2,3,4,5,6,7,8,9} است. در سیستم عدد نویسی دودویی نیز مبنا عدد 2 و ارقام آن مجموعه {0,1} است.
    </string>

</resources>