<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ir.mnemati.baseconvertor.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_learn"
        android:name="ir.mnemati.baseconvertor.ui.learn.LearnFragment"
        android:label="@string/menu_learn"
        tools:layout="@layout/fragment_learn" />

    <fragment
        android:id="@+id/nav_info"
        android:name="ir.mnemati.baseconvertor.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>