<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.info.InfoFragment">

    <TextView
        android:text="@string/about_title0"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:justificationMode="inter_word"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/mnemati"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:civ_border_width="3dp"
        app:civ_border_color="#FF000000"/>
    <TextView
        android:text="@string/about_title1"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/about_title3"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_email"
        android:text="@string/btn_email"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="170dp"
        android:textSize="16sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/about_version"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>