<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/splash_backcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/binarycode"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="120dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/binary"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:civ_border_width="3dp"
        app:civ_border_color="#FF000000"/>
    <TextView
        android:id="@+id/sub_title1"
        android:text="@string/sub_title1"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/sub_title2"
        android:text="@string/sub_title2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/sub_title3"
        android:text="@string/sub_title3"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>